# MD-ASG-05

./: README.md  app.py  pyproject.toml  requirements-full.txt  requirements.txt
models/: pipeline.pkl
source/: config.py  evaluation.py  ingest.py  pipeline.py  preprocessing.py  training.py
spaceship_titanic.egg-info/: PKG-INFO  SOURCES.txt
