[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "spaceship-titanic"
version = "0.1.0"
description = "Proper Pipeline for the Spaceship Titanic + Deploy"
requires-python = ">=3.10"
 
[tool.setuptools.packages.find]
where = ["."]
include = ["source*", "models*"]